<resources>
    <string name="app_name">Just Coffee</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quantity_textView">QUANTITY</string>
    <string name="quantity_default">0</string>
    <string name="order">ORDER</string>
    <string name="price_default">$0</string>
    <string name="price_textView">PRICE</string>
    <string name="add">+</string>
    <string name="minus">-</string>
</resources>
