<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_textView"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/plus_button"
        android:layout_marginTop="16dp"
        android:onClick="incrementOrder"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_default"
        android:textColor="@android:color/black"
        android:textSize="36dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
      />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minus_button"
        android:layout_marginTop="16dp"
        android:onClick="decrementOrder"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_textView"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_default"
        android:textColor="@android:color/black"
        android:textSize="36dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:id="@+id/order_button"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        />


</LinearLayout>
